validaciones en js de lo input

--- a/client/css/concesionaria.css
+++ b/client/css/concesionaria.css
@@ -9,6 +9,10 @@ body {
     text-align: center;
     margin: 20px 0;
   }
+  h2 {
+    text-align: center;
+    margin: 20px 0;
+  }
 
   #botonesPrincipales {
     display: flex;
